--- a/src/NeoToolKits/NeoToolKits.vcxproj.filters
+++ b/src/NeoToolKits/NeoToolKits.vcxproj.filters
@@ -236,6 +236,9 @@
     <ClCompile Include="Common\Unit\xlsx\source\xlsxzipwriter.cpp">
       <Filter>Common\Unit\xlsx\source</Filter>
     </ClCompile>
+    <ClCompile Include="Business\ExcelDataUploadApp.cpp">
+      <Filter>Tools\ExcelDataUpload\Business</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="UI\Class\ExcelDataUploadConfigPopDialog.h">
@@ -258,6 +261,9 @@
     </QtMoc>
     <QtMoc Include="Common\Unit\xlsx\header\xlsxdocument.h">
       <Filter>Common\Unit\xlsx\header</Filter>
+    </QtMoc>
+    <QtMoc Include="Business\ExcelDataUploadApp.h">
+      <Filter>Tools\ExcelDataUpload\Business</Filter>
     </QtMoc>
   </ItemGroup>
   <ItemGroup>
