--- a/src/NeoToolKits/NeoToolKits.vcxproj.filters
+++ b/src/NeoToolKits/NeoToolKits.vcxproj.filters
@@ -278,6 +278,9 @@
     <ClCompile Include="UI\Class\DBScriptDataTableView.cpp">
       <Filter>Tools\DbScriptEditor\UI\Class\View</Filter>
     </ClCompile>
+    <ClCompile Include="UI\Class\DBScriptTestItemsEditorPopDialog.cpp">
+      <Filter>Tools\DbScriptEditor\UI\Class</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="UI\Class\ExcelDataUploadConfigPopDialog.h">
@@ -322,6 +325,9 @@
     <QtMoc Include="UI\Class\DBScriptDataTableView.h">
       <Filter>Tools\DbScriptEditor\UI\Class\View</Filter>
     </QtMoc>
+    <QtMoc Include="UI\Class\DBScriptTestItemsEditorPopDialog.h">
+      <Filter>Tools\DbScriptEditor\UI\Class</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="UI\Form\ExcelDataUploadConfigPopDialog.ui">
@@ -337,6 +343,9 @@
       <Filter>Main\UI\Form</Filter>
     </QtUic>
     <QtUic Include="UI\Form\DbScriptEditorPageForm.ui">
+      <Filter>Tools\DbScriptEditor\UI\Form</Filter>
+    </QtUic>
+    <QtUic Include="UI\Form\DBScriptTestItemsEditorPopDialog.ui">
       <Filter>Tools\DbScriptEditor\UI\Form</Filter>
     </QtUic>
   </ItemGroup>
